[API change] Do not bind gobject_get_data() and gobject_set_data()

They will basically cause a crash if misused, and you can always use a
python member attribute instead.

These methods were marked as deprecated for 3.4 and throwing a warning, so
let's remove them for good now.

https://bugzilla.gnome.org/show_bug.cgi?id=641944

Co-Authored-By: Martin Pitt <martinpitt@gnome.org>